# cmake-template

./: CMakeLists.txt  cmake.bat  cmake.ini  cmake.py
cmake/: internal_utils.cmake
src/: CMakeLists.txt
src/subproject/: CMakeLists.txt
test/: CMakelists.txt
test/subproject_test/: CMakeLists.txt
